@@ -2,7 +2,7 @@ sg3-utils (1.38-0.1) unstable; urgency=low
 
   * New upstream version
 
- -- Douglas Gilbert <dgilbert@interlog.com>  Tue, 11 Mar 2014 21:00:00 +0100
+ -- Douglas Gilbert <dgilbert@interlog.com>  Sat, 22 Mar 2014 11:00:00 -0400
 
 sg3-utils (1.37-0.1) unstable; urgency=low
 
