@@ -2,7 +2,7 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages. There is also a sg3_utils man page.
 
-Changelog for sg3_utils-1.38 [20140318] [svn: r560]
+Changelog for sg3_utils-1.38 [20140322] [svn: r561]
   - sg_ses: add --dev-slot-num= and --sas-addr=
     - fix --data=- problem with large buffers
     - new --data=@FN to read hex data from file FN
@@ -45,6 +45,7 @@ Changelog for sg3_utils-1.38 [20140318] [svn: r560]
   - sg_lib.h: add PDT_ZBC define (spc4r36p)
   - sg_lib_data: sync asc/ascq codes with T10 dated 20140122
     - add pdt string for ZBC (spc4r36p)
+  - sg_lib: extensions to sg_get_num() and sg_get_llnum()
   - sg_cmds_extra: fix sa bug in sg_ll_3party_copy_out()
   - scripts/rescan-scsi-bus.sh: check if FC driver exports
     issue_lip before using it
